--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "eject": "react-scripts eject",
     "start-dev-server": "node ./server/server.js",
     "start-dev": "yarn start-dev-server & yarn start-react",
-    "start": "node ./server/server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "start": "node ./server/server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
