--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "build-react": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-dev-server": "node ./server/server.js",
+    "start-dev-server": "node server.js",
     "start-dev": "yarn start-dev-server & yarn start-react",
-    "start": "node ./server/server.js",
+    "start": "node server.js",
     "heroku-postbuild": "yarn build-react"
   },
   "eslintConfig": {
